@@ -8,6 +8,7 @@
   * Update Path logic and tests
   * Add roots named scope to Tree
   * Always add :class to nestable_options
+  * Refactor Path#update_child_path_column_values
 
 2009-06-14 - Sean Huber (shuber@huberry.com)
   * Update Nestable interface logic
